kubernetes/mariadb/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mariadb-sys
  labels:
    name: mariadb-sys
