kubernetes/mariadb/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mysql-in
  namespace: mariadb-sys

spec:
  entryPoints:
    - mysql

  routes:
  - match: HostSNI(`db.wrenspace.dev`)
    services:
    - name: mariadb-port
      port: 3306
  
  tls:
    passthrough: true
